--- a/lib/generators/config.yml
+++ b/lib/generators/config.yml
@@ -1,19 +1,30 @@
-url: localhost
-user:
-repository:
-revision:
-deploy_to:
-backup: false
-app:
-db:
+repository: set your repository location here
+url: set your application url here
+
+#user: set your ssh user
+#scm: set your scm. defaults to git
+#revision:
+#deploy_to: set your application location on the server
+
+# Uncomment to have Pomander backup databases on deployments.
+#backup: true
+
+app:                       # Your http server(s) host or IP
+  - your app-server here
+db:                        # Your database server(s) host or IP
+  - your db-server here
+
+# If your app uses a database uncomment this:
+database:
+  name:
+  user:
+  password:
+  host: 127.0.0.1
+  charset: utf8
+
 wordpress:
-  version: 3.3.1
-  db: wp_database
-  db_user: root
-  db_password:
-  db_host: localhost
+  version: 3.4.2
   db_prefix: wp_
-  db_charset: utf8
   base_uri: /wordpress
 plugins:
   
