Wordpress manages its deployments via the Release object.
Releases will default to the latest Wordpress release, and also default
to the wordpress folder for installation unless specified otherwise.

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
 		}
 	],
 	"require": {
-		"pomander/pomander": "*"
+		"jaz303/phake": "@dev",
+		"pomander/pomander": "@dev"
 	},
 	"autoload": {
 		"psr-0": {
